# shop/openapi.yaml
@@ -7,6 +7,24 @@ info:
     description: The Shop service definition.
     version: 0.0.1
 paths:
+    /api/create/address:
+        post:
+            tags:
+                - Shop
+            operationId: Shop_CreateAddress
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateAddressReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AddressInfo'
     /api/users/captcha:
         get:
             tags:
@@ -19,18 +37,11 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/CaptchaReply'
-    /api/users/detail/{id}:
+    /api/users/detail:
         get:
             tags:
                 - Shop
             operationId: Shop_Detail
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int64
             responses:
                 "200":
                     description: OK
@@ -76,6 +87,29 @@ paths:
                                 $ref: '#/components/schemas/RegisterReply'
 components:
     schemas:
+        AddressInfo:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
+                mobile:
+                    type: string
+                Province:
+                    type: string
+                City:
+                    type: string
+                Districts:
+                    type: string
+                address:
+                    type: string
+                postCode:
+                    type: string
+                isDefault:
+                    type: integer
+                    format: int32
         CaptchaReply:
             type: object
             properties:
@@ -83,6 +117,29 @@ components:
                     type: string
                 picPath:
                     type: string
+        CreateAddressReq:
+            type: object
+            properties:
+                uid:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
+                mobile:
+                    type: string
+                Province:
+                    type: string
+                City:
+                    type: string
+                Districts:
+                    type: string
+                address:
+                    type: string
+                postCode:
+                    type: string
+                isDefault:
+                    type: integer
+                    format: int32
         LoginReq:
             type: object
             properties:
